Cart fixed Overflow in sticky and change product name radio

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -182,9 +182,11 @@ html, body {
 }
 
 .offcanvas-body {
-  /* overflow: auto; */
+  /* overflow: scroll; */
+  overflow: auto;
   /* overflow-x: hidden; */
   /* overflow-y: hidden; */
+  padding-bottom: 0;
 }
 
 .cart-products {
@@ -194,8 +196,9 @@ html, body {
   /* overflow: auto !important; */
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  /* overflow-x: hidden; */
+  /* overflow-y: hidden; */
+  margin-bottom: 40%;
 }
 
 .cart-products::-webkit-scrollbar {
@@ -300,8 +303,10 @@ html, body {
   position: -webkit-sticky;
   position: sticky;
   bottom: 0;
+  /* background-color: green; */
   background-color: #5B5980;
-  padding-top: 5%;
+  padding-top: 1%;
+  padding-bottom: 5%;
 }
 
 .subtotal-cart-container {
@@ -1109,7 +1114,6 @@ and (max-width: 580px) {
 
 .product-img {
   width: 75%;
-  /* padding: 3% 3%; */
 }
 
 .product-img-2 {
